--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,16 @@ main::-webkit-scrollbar-thumb {
   background: #6649b8;
 }
 
-form {
+.loginInfo {
+  height: 5vh;
+  background-color: rgb(24, 23, 23);
+  width: 25%;
+  display: flex;
+  font-size: 1.5rem;
+  margin: 0 auto;
+}
+
+.messageBox {
   height: 10vh;
   position: fixed;
   bottom: 0;
@@ -62,7 +71,7 @@ form {
   font-size: 1.5rem;
 }
 
-form button {
+.send {
   width: 20%;
   background-color: rgb(56, 56, 143);
 }
@@ -97,11 +106,10 @@ button:disabled {
 }
 
 
-.sign-in {
+.googleLogin {
   color: #282c34;
   background: white;
-  max-width: 400px;
-  margin: 0 auto;
+  margin: 10px auto;
 }
 
 
@@ -113,7 +121,6 @@ ul, li {
 }
 
 p {
-  max-width: 500px;
   margin-bottom: 12px;
   line-height: 24px;
   padding: 10px 20px;
