--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #282c34;
+  background-color: #008cff;
 }
 
 .App {
@@ -8,7 +8,7 @@ body {
 }
 
 .App header {
-  background-color: #181717;
+  background-color: #008cff;
   height: 10vh;
   min-height: 50px;
   color: white;
@@ -28,7 +28,7 @@ body {
   flex-direction: column;
   justify-content: center;
   min-height: 100vh;
-  background-color: rgb(40, 37, 53);
+  background-color: #e9e9e9;
 }
 
 main {
@@ -45,16 +45,17 @@ main::-webkit-scrollbar {
 }
 
 main::-webkit-scrollbar-track {
-  background: #1e1e24;
+  background: #e9e9e9;
 }
 
 main::-webkit-scrollbar-thumb {
-  background: #6649b8;
+  background: #e9e9e9;
 }
 
 .loginInfo {
   height: 5vh;
-  background-color: rgb(24, 23, 23);
+  background-color: #ffffff;
+  color: #000000;
   width: 25%;
   display: flex;
   font-size: 1.5rem;
@@ -65,7 +66,7 @@ main::-webkit-scrollbar-thumb {
   height: 10vh;
   position: fixed;
   bottom: 0;
-  background-color: rgb(24, 23, 23);
+  background-color: #ffffff;
   width: 100%;
   display: flex;
   font-size: 1.5rem;
@@ -73,7 +74,7 @@ main::-webkit-scrollbar-thumb {
 
 .send {
   width: 20%;
-  background-color: rgb(56, 56, 143);
+  background-color: #008cff;
 }
 
 
@@ -81,8 +82,8 @@ input {
   line-height: 1.5;
   width: 100%;
   font-size: 1.5rem;
-  background: rgb(58, 58, 58);
-  color: white;
+  background: #ffffff;
+  color: #000000;
   outline: none;
   border: none;
   padding: 0 10px;
@@ -107,13 +108,10 @@ button:disabled {
 
 
 .googleLogin {
-  color: #282c34;
-  background: white;
+  color: #ffffff;
+  background: #008cff;
   margin: 10px auto;
 }
-
-
-
 
 ul, li {
   text-align: left;
@@ -142,11 +140,11 @@ p {
 
 .sent p {
   color: white;
-  background: #0b93f6;
+  background: #008cff;
   align-self: flex-end;
 }
 .received p {
-  background: #e5e5ea;
+  background: #ffffff;
   color: black;
 }
 
